--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,31 @@
 <resources>
     <string name="app_name">HotelTest</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_super">Супер!</string>
+
+    <string name="hotel_title">Отель</string>
+    <string name="hotel_about">Об отеле</string>
+    <string name="hotel_facilities">Удобства</string>
+    <string name="hotel_what_included">Что включено</string>
+    <string name="hotel_not_included">Что не включено</string>
+    <string name="hotel_essentials">Самое необходимое</string>
+    <string name="hotel_to_choose">К выбору номера</string>
+
+    <string name="rooms_choose_room">Выбрать номер</string>
+    <string name="rooms_details">Подробнее о номере</string>
+    <string name="order_processed">Ваш заказ принят в работу</string>
+    <string name="order_confirmation">Подтверждение заказа №104893 может\n
+        занять некоторое время (от 1 часа до суток).\n
+        Как только мы получим ответ от\n
+        туроператора, вам на почту придет\n
+        уведомление.</string>
+
+    <string name="booking_departure">Вылет из</string>
+    <string name="booking_arrival_country">Страна, город</string>
+    <string name="booking_dates">Даты</string>
+    <string name="booking_number_of_nights">Кол-во ночей</string>
+    <string name="booking_hotel">Отель</string>
+    <string name="booking_room">Номер</string>
+    <string name="booking_nutrition">Питание</string>
+    <string name="booking_buyer_information">Информация о покупателе</string>
+
 </resources>
